--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,31 +1,41 @@
+# workflow modified from https://tarleb.com/posts/quarto-with-gh-pages/
+name: Quarto Publish
+
 on:
   push:
     branches: main
 
-name: Quarto Publish
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+# Allow one concurrent deployment
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
 
 jobs:
-  build-deploy:
+  quarto:
     runs-on: ubuntu-latest
-
-    permissions:
-      contents: write
-
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     steps:
-      - name: Check out repository
-
+      - name: Checkout repository
         uses: actions/checkout@v4
-
-      - name: Set up Quarto
-
+      - name: Install Quarto
         uses: quarto-dev/quarto-actions/setup@v2
-
-      - name: Render and Publish
-
-        uses: quarto-dev/quarto-actions/publish@v2
-
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
+      - name: Render Website
+        run: quarto render
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          target: gh-pages
-
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          # Upload entire repository
+          path: "_site"
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
